fixes chat sizing issues on ios.

--- a/src/_index.scss
+++ b/src/_index.scss
@@ -40,10 +40,19 @@ html {
 }
 
 body {
-  overflow:hidden;
+  overflow: hidden;
   height: 100%;
   min-height: -webkit-fill-available;
-  padding:0;
-  margin:0;
+  padding: 0;
+  margin: 0;
   background: rgba(16, 18, 27, 0.8);
+}
+
+#root {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: transparent;
 }
